fixed glitch (overflowing x axis on mobile)

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -18,6 +18,6 @@
     --page-padding: 2.5rem;
   }
   @include media($mobile-br-3) {
-    --page-padding: 0.5rem;
+    --page-padding: 1rem;
   }
 }
