--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -3,7 +3,7 @@
 // Navigation
 
 #navigation {
-  width: 100%;
+  width: 100vw;
   position: fixed;
   z-index: 100;
   padding: 0 var(--page-padding);
